LSTM files update2

--- a/LSTM/LSTM_Implementation.ipynb
+++ b/LSTM/LSTM_Implementation.ipynb
@@ -84,7 +84,7 @@
    ],
    "source": [
     "# Split the data into training and testing\n",
-    "history_values, next_values, unscaled_y, y_normaliser = csv_to_dataset('Training_Data_UpdatedAcc.csv')\n",
+    "history_values, next_values, unscaled_y, y_normaliser = csv_to_dataset('../dataset/Training_Data.csv')\n",
     "\n",
     "test_split = 0.9 # the percent of data to be used for testing\n",
     "n = int(history_values.shape[0] * test_split)\n",
@@ -784,13 +784,7 @@
       "11325/11325 [==============================] - 5s 412us/step - loss: 0.0011 - val_loss: 0.0089\n",
       "Epoch 150/200\n",
       "11325/11325 [==============================] - 5s 400us/step - loss: 0.0011 - val_loss: 0.0078\n",
-      "Epoch 151/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 151/200\n",
       "11325/11325 [==============================] - 5s 402us/step - loss: 0.0010 - val_loss: 0.0086\n",
       "Epoch 152/200\n",
       "11325/11325 [==============================] - 5s 405us/step - loss: 0.0011 - val_loss: 0.0080\n",
@@ -1029,36 +1023,7 @@
    "source": [
     "# Constants\n",
     "history_points = 100\n",
-    "epochs = 100\n",
-    "\n",
-    "# Create the dataset from the csv\n",
-    "# Does some preprocessing on the data\n",
-    "def csv_to_dataset(csv_path):\n",
-    "    data = pd.read_csv(csv_path)\n",
-    "\n",
-    "#     print(data.columns.values)\n",
-    "    data = data.drop(columns=[' Calculated_Acceleration'])\n",
-    "#     print(data)\n",
-    "\n",
-    "    data = np.array(data)\n",
-    "\n",
-    "    data_normaliser = preprocessing.MinMaxScaler()\n",
-    "    data_normalised = data_normaliser.fit_transform(data)\n",
-    "\n",
-    "    # using the last history_points predict the next value\n",
-    "    histories_normalised = np.array([data_normalised[i: i + history_points, :-1].copy() for i in range(len(data_normalised) - history_points)])\n",
-    "    next_values_normalised = np.array([data_normalised[:,-1][i + history_points].copy() for i in range(len(data_normalised) - history_points)])\n",
-    "    next_values_normalised = np.expand_dims(next_values_normalised, -1)\n",
-    "\n",
-    "    next_values = np.array([data[:,-1][i + history_points].copy() for i in range(len(data) - history_points)])\n",
-    "\n",
-    "    next_values = np.expand_dims(next_values, -1)\n",
-    "\n",
-    "    y_normaliser = preprocessing.MinMaxScaler()\n",
-    "    y_normaliser.fit(next_values)\n",
-    "\n",
-    "    assert histories_normalised.shape[0] == next_values_normalised.shape[0]\n",
-    "    return histories_normalised, next_values_normalised, next_values, y_normaliser"
+    "epochs = 100"
    ]
   },
   {
@@ -1076,7 +1041,7 @@
    ],
    "source": [
     "# Split the data into training and testing\n",
-    "history_values, next_values, unscaled_y, y_normaliser = csv_to_dataset('Training_Data_UpdatedAcc.csv')\n",
+    "history_values, next_values, unscaled_y, y_normaliser = csv_to_dataset('../dataset/Training_Data.csv')\n",
     "\n",
     "test_split = 0.9 # the percent of data to be used for testing\n",
     "n = int(history_values.shape[0] * test_split)\n",
@@ -1435,36 +1400,7 @@
    "source": [
     "# Constants\n",
     "history_points = 10\n",
-    "epochs = 100\n",
-    "\n",
-    "# Create the dataset from the csv\n",
-    "# Does some preprocessing on the data\n",
-    "def csv_to_dataset(csv_path):\n",
-    "    data = pd.read_csv(csv_path)\n",
-    "\n",
-    "#     print(data.columns.values)\n",
-    "    data = data.drop(columns=[' Calculated_Acceleration'])\n",
-    "#     print(data)\n",
-    "\n",
-    "    data = np.array(data)\n",
-    "\n",
-    "    data_normaliser = preprocessing.MinMaxScaler()\n",
-    "    data_normalised = data_normaliser.fit_transform(data)\n",
-    "\n",
-    "    # using the last history_points predict the next value\n",
-    "    histories_normalised = np.array([data_normalised[i: i + history_points, :-1].copy() for i in range(len(data_normalised) - history_points)])\n",
-    "    next_values_normalised = np.array([data_normalised[:,-1][i + history_points].copy() for i in range(len(data_normalised) - history_points)])\n",
-    "    next_values_normalised = np.expand_dims(next_values_normalised, -1)\n",
-    "\n",
-    "    next_values = np.array([data[:,-1][i + history_points].copy() for i in range(len(data) - history_points)])\n",
-    "\n",
-    "    next_values = np.expand_dims(next_values, -1)\n",
-    "\n",
-    "    y_normaliser = preprocessing.MinMaxScaler()\n",
-    "    y_normaliser.fit(next_values)\n",
-    "\n",
-    "    assert histories_normalised.shape[0] == next_values_normalised.shape[0]\n",
-    "    return histories_normalised, next_values_normalised, next_values, y_normaliser"
+    "epochs = 100"
    ]
   },
   {
@@ -1482,7 +1418,7 @@
    ],
    "source": [
     "# Split the data into training and testing\n",
-    "history_values, next_values, unscaled_y, y_normaliser = csv_to_dataset('Training_Data_UpdatedAcc.csv')\n",
+    "history_values, next_values, unscaled_y, y_normaliser = csv_to_dataset('../dataset/Training_Data.csv')\n",
     "\n",
     "test_split = 0.9 # the percent of data to be used for testing\n",
     "n = int(history_values.shape[0] * test_split)\n",
