ANN files update - dataset path and remove .py files

--- a/ANN/Drone_ANN.ipynb
+++ b/ANN/Drone_ANN.ipynb
@@ -31,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -99,7 +97,7 @@
    "source": [
     "# Reading in data and formatting it for the model\n",
     "\n",
-    "data = pd.read_csv('Training_Data.csv', delimiter=',')\n",
+    "data = pd.read_csv('../dataset/Training_Data.csv', delimiter=',')\n",
     "\n",
     "# Drop the calculated acceleration\n",
     "calc_accel = data[' Calculated_Acceleration'].to_numpy()\n",
@@ -180,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
