extra dataset files removed

--- a/LinearRegression/LinRegModels.ipynb
+++ b/LinearRegression/LinRegModels.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "q = Tasks(full_dataset_filename='../dataset/Training_Data.csv', \n",
-    "         judge_filename='../dataset/Training_Data_Old.csv')"
+    "         judge_filename='../dataset/Training_Data.csv')"
    ]
   },
   {
@@ -555,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
